# client_qt

./: .gitignore  CMakeLists.txt  README.md  chatbot_widget.cpp  conveyor.h  conveyor.ui  device_chart_widget.h  errorchartmanager.cpp  home.h  how --stat HEAD  login_window.cpp  mainwindow.h  mainwindow.ui  mcp_btn.cpp  qr_code_dialog.cpp  qr_code_dialog.h  resources.qrc  streamer.h  로컬 디스크 (C) - 바로 가기.lnk
client_qt/: .gitignore  CMakeLists.txt  DataFormatter.cpp  DataFormatter.h  LogManager.cpp  LogManager.h  MCPAgentClient.cpp  MCPAgentClient.h  PromptGenerators.cpp  PromptGenerators.h  README.md  ToolExamples.cpp  ai_command.cpp  ai_command.h  cardevent.cpp  cardevent.h  cardhovereffect.cpp  chartcardwidget.cpp  chatbot_widget.cpp  chatbot_widget.h  conveyor.cpp  conveyor.h  conveyor.ui  device_chart.cpp  device_chart.h  devicee_speed_chart.cpp  devicee_speed_chart.h  error_message_card.cpp  errorchartmanager.cpp  errorchartmanager.h  factory_mcp.cpp  factory_mcp.h  home.cpp  home.h  home.ui  led.cpp  led.h  ledwidget.cpp  ledwidget.h  login_window.cpp  (+17 more)
client_qt/charts/: device_chart.cpp  device_chart.h  device_speed_chart.cpp  errorchartmanager.cpp  monthly_statistics_popup.cpp  monthly_statistics_popup.h
client_qt/config/: cert.pem
client_qt/mcp/: DataFormatter.cpp  DataFormatter.h  DataStructures.h  MCPAgentClient.cpp  MCPAgentClient.h  PromptGenerators.cpp  PromptGenerators.h  READ_MCP.md  ToolExamples.cpp  ToolExamples.h  chatbot_widget.cpp  chatbot_widget.h  factory_mcp.cpp  factory_mcp.h  mcp_btn.cpp  mcp_btn.h  prompt.xml
client_qt/ui/: conveyor.cpp  conveyor.h  conveyor.ui  home.cpp  home.h  home.ui  login_window.cpp  login_window.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qr_code_dialog.cpp
client_qt/utils/: ai_command.h  font_manager.cpp  font_manager.h
client_qt/video/: video_mqtt.cpp  videoplayer.cpp  videoplayer.h
client_qt/widgets/: cardevent.cpp  cardhovereffect.cpp  cardhovereffect.h  chartcardwidget.cpp  chartcardwidget.h  error_message_card.cpp  error_message_card.h
config/: gemini.key
images/: images.qrc
